# haydn

./: .gitignore  Cargo.toml  LICENSE  README.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-language-specification/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-vm-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-tuning-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/03.1-simulated-performer/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-PLAN.md  03.1-03-SUMMARY.md  03.1-04-PLAN.md  03.1-04-SUMMARY.md  03.1-CONTEXT.md  03.1-DISCUSSION-LOG.md  03.1-RESEARCH.md
.planning/phases/04-midi-input-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-VERIFICATION.md
.planning/phases/05-cli-visualization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-audio-capture-pitch-detection/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md
.planning/phases/07-audio-integration-instrument-tunings/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-example-programs-content/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-VERIFICATION.md
.planning/phases/09-distribution-release/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-HUMAN-UAT.md  09-VERIFICATION.md
.planning/phases/11-perform-and-interpret-pipeline/: 11-CONTEXT.md  11-DISCUSSION-LOG.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/haydn/: Cargo.toml
crates/haydn-audio/: Cargo.toml
crates/haydn-audio/src/: capture.rs  gate.rs  lib.rs  onset.rs  state_machine.rs  types.rs
crates/haydn-audio/src/pitch/: mcleod.rs  mod.rs  yin.rs
crates/haydn-audio/tests/: integration.rs  onset_detection.rs  pitch_accuracy.rs
crates/haydn-performer/: Cargo.toml  MANUAL-TESTS.md
crates/haydn-performer/examples/: bolero.ly  close-encounters.ly  fizzbuzz-intro.ly  hello-world-interpret.ly  hello-world.ly  nimrod.ly  ode-to-joy.ly  ravel-quartet.ly  scale.ly  surprise-symphony.ly  twinkle.ly  zarathustra.ly
crates/haydn-performer/src/: cli.rs  display.rs  interpret.rs  lib.rs  main.rs  midi.rs  parser.rs  types.rs
crates/haydn-performer/src/synth/: adsr.rs  builtin.rs  effects.rs  expressive.rs  mod.rs  sine.rs  soundfont.rs  timbre.rs  waveform.rs
crates/haydn-performer/tests/: parser.rs
crates/haydn-tuning/: Cargo.toml
crates/haydn-tuning/src/: engine.rs  error.rs  lib.rs  types.rs  validate.rs
crates/haydn-tuning/tests/: integration.rs  parsing.rs
crates/haydn-tuning/tunings/: guitar.toml  piano.toml  voice.toml
crates/haydn-vm/: Cargo.toml
crates/haydn-vm/src/: lib.rs  loop_machine.rs  opcodes.rs  types.rs
crates/haydn-vm/tests/: examples.rs  integration.rs
crates/haydn/src/: display.rs  lib.rs  main.rs
crates/haydn/tests/: pipeline.rs
docs/: RELEASE-CHECKLIST.md  SPECIFICATION.md  TUNING.md  esolang-wiki.md
examples/: cat.md  fizzbuzz.md  hello-world.md  truth-machine.md
