[package]
name = "haydn-performer"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jwgeller/haydn"
description = "Simulated performer for the Haydn esoteric programming language"
keywords = ["esoteric", "programming-language", "music", "lilypond"]
categories = ["multimedia::audio"]

[[bin]]
name = "haydn-performer"
path = "src/main.rs"

[dependencies]
nom = "8"
thiserror = "2"
rodio = "0.20"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rustysynth = "1.3"
midly = "0.5"
midir = "0.10"
ratatui = "0.29"
crossterm = "0.28"
cpal = "0.15"
