[package]
name = "haydn-tuning"
version = "0.0.1"
edition = "2021"
description = "Tuning file parser and rule engine for the Haydn esoteric programming language"
license = "MIT"
repository = "https://github.com/jwgeller/haydn"
keywords = ["esoteric", "programming-language", "music", "tuning"]
categories = ["compilers"]

[dependencies]
haydn-vm = { path = "../haydn-vm" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
