[package]
name = "haydn"
version = "0.0.1"
edition = "2021"
description = "Haydn — an esoteric programming language performed by music"
license = "MIT"
repository = "https://github.com/jwgeller/haydn"
keywords = ["esoteric", "programming-language", "music"]
categories = ["compilers"]

[dependencies]
haydn-vm = { path = "../haydn-vm" }
haydn-tuning = { path = "../haydn-tuning" }
haydn-audio = { path = "../haydn-audio" }
cpal = "0.15"
midir = "0.10"
midly = "0.5"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
